<resources>
    <string name="app_name">Retail</string>
    <string name="facebook_app_id">1793049447615493</string>
    <string name="cancel_login">Login Cancelado</string>
    <string name="welcome">Bem vindo</string>
    <string name="error_login">Ocorreu um erro ao entrar</string>
    <string name="msg_aguarde">Aguarde</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    //Variaveis da tela "informações do decricao
    <string name="title_activity_info_produto">Informações do Produto</string>
    <string name="image_info_produto">imagem do decricao</string>
    <string name="nome_produto">nome do decricao</string>
    <string name="preco_produto">preço do decricao</string>
    <string name="tamanho_produto">tamanho do decricao</string>
    <string name="cor_produto">cor do decricao</string>
    <string name="valor_preco_produto">valor do preço do decricao</string>
    <string name="valor_tamanho_produto">valor do tamanho do decricao</string>
    <string name="valor_cor_produto">valor das cores do decricao</string>
    <string name="list_review">lista com comentarios sobre o decricao</string>
    <string name="chamar_atendente_info_produto">button chamar atendente info decricao</string>
    <string name="adicionar_carrinho">button adicionar o decricao no carirnho</string>

    //Tela Info_Client
    <string-array name="sexo">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>

    <string name="sexo_prompt">Sexo</string>
    <string name="title_activity_side_bar">SideBarActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
</resources>
