<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_infor_produto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.unifor.retail.view.activity.ProductActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarProduct"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@string/image_info_produto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nome_produto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:gravity="center"
                    android:text=""
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@string/preco_produto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Preço R$"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@string/tamanho_produto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tamanho"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@string/cor_produto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="Cores"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/valor_preco_produto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/valor_tamanho_produto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/valor_cor_produto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15dp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Comentarios:"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ListView
            android:id="@string/list_review"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:layout_marginTop="5dp"></ListView>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@string/chamar_atendente_info_produto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="Atendente" />

        <Button
            android:id="@string/adicionar_carrinho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="Carrinho" />
    </LinearLayout>

</LinearLayout>
